--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -13,5 +13,4 @@
 @import "scss/components/photo";
 @import "scss/components/weather";
 @import "scss/components/widgets";
-@import "scss/pages/home";
-@import "scss/pages/admin";
+@import "scss/components/login";
