--- a/client/src/scss/base/_reset.scss
+++ b/client/src/scss/base/_reset.scss
@@ -14,5 +14,5 @@ body {
   overflow-x: hidden;
   height: 100vh;
   max-height: 100vh;
-  background-color: $color-white;
+  background-color: $color-light-grey;
 }
