--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Ubuntu");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:500,700");
 html {
   box-sizing: border-box; }
 
@@ -13,7 +13,46 @@ body {
   overflow-x: hidden;
   height: 100vh;
   max-height: 100vh;
-  background-color: #f2f2f2; }
+  background-color: #f4f5f5; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold; }
+
+p,
+span,
+a,
+li {
+  font-family: "Montserrat", sans-serif;
+  font-weight: medium; }
+
+.z-depth-0 {
+  box-shadow: none !important; }
+
+.z-depth-1 {
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.04), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2); }
+
+.z-depth-2 {
+  -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3); }
+
+.z-depth-3 {
+  -webkit-box-shadow: 0 8px 17px 2px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 8px 17px 2px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2); }
+
+.z-depth-4 {
+  -webkit-box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2); }
+
+.z-depth-5 {
+  -webkit-box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2); }
 
 .rw-main.type-today {
   border-radius: 0px; }
@@ -22,14 +61,14 @@ body {
   transition: height 200ms ease; }
 
 .title {
-  font-family: "Ubuntu";
+  font-family: "Montserrat", sans-serif;
   float: right;
   font-size: 30px;
-  color: #f2f2f2;
+  color: white;
   margin-right: 10px; }
 
 .widgetselecter {
-  background-color: #171717;
+  background-color: #3d3d3d;
   padding-top: 10px;
   padding-left: 10px;
   height: 50px; }
@@ -37,23 +76,52 @@ body {
 .Select-control {
   border-radius: 0px !important;
   border: none !important;
-  background-color: #f2f2f2 !important; }
+  background-color: white !important; }
 
 .addButton {
   border-radius: 0px;
-  background-color: #f2f2f2;
+  background-color: #707070;
   height: 38px; }
   .addButton:hover {
-    background-color: #cbcbcb;
+    background-color: #565656;
     transition: 0.2s; }
 
 .resetButton {
   border-radius: 0px;
-  background-color: #f2f2f2;
+  background-color: #707070;
   height: 38px; }
   .resetButton:hover {
-    background-color: #cbcbcb;
+    background-color: #565656;
     transition: 0.2s; }
+
+.titleBar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  z-index: 1; }
+  .titleBar h1 {
+    color: #707070;
+    padding: 10px;
+    margin-bottom: 0;
+    font-size: 30px; }
+  .titleBar .contentRight {
+    margin-bottom: 0; }
+    .titleBar .contentRight li {
+      padding: 16px 20px;
+      display: inline-block; }
+
+.sideNav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 30vw;
+  background-color: white;
+  height: 100vh;
+  margin-top: 56px; }
 
 .dropdown {
   width: 150px;
@@ -61,7 +129,7 @@ body {
 
 .clock {
   font-size: 35px;
-  color: #171717;
+  color: #3d3d3d;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -189,6 +257,6 @@ body {
 
 .react-grid-item {
   text-align: center;
-  background: #cbcbcb;
+  background: #565656;
   transition: all 200ms ease;
   transition-property: left, top; }
