--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,11 +3,14 @@
 @import "scss/abstracts/functions";
 @import "scss/base/reset";
 @import "scss/base/typography";
+@import "scss/base/shadows";
 @import "scss/layout/grid";
 @import "scss/layout/header";
 @import "scss/layout/footer";
 @import "scss/layout/nav";
 @import "scss/components/buttons";
+@import "scss/components/titleBar";
+@import "scss/components/sideNav";
 @import "scss/components/dropdown";
 @import "scss/components/clock";
 @import "scss/components/photo";
