--- a/client/src/scss/components/_buttons.scss
+++ b/client/src/scss/components/_buttons.scss
@@ -1,19 +1,19 @@
 .addButton {
-  border-radius: 0px;
-	background-color: $color-white;
-	height: 38px;
-	&:hover {
-		background-color: $color-white-hover;
-		transition: 0.2s;
-	}
+    border-radius: 0px;
+    background-color: $color-grey;
+    height: 38px;
+    &:hover {
+        background-color: $color-grey-hover;
+        transition: 0.2s;
+    }
 }
 
 .resetButton {
-	border-radius: 0px;
-	background-color: $color-white;
-	height: 38px;
-	&:hover {
-		background-color: $color-white-hover;
-		transition: 0.2s;
-	}
+    border-radius: 0px;
+    background-color: $color-grey;
+    height: 38px;
+    &:hover {
+        background-color: $color-grey-hover;
+        transition: 0.2s;
+    }
 }
