--- a/client/src/scss/components/_widgets.scss
+++ b/client/src/scss/components/_widgets.scss
@@ -1,6 +1,6 @@
 .react-grid-item {
-	text-align: center;
-	background: $color-white-hover;
-	transition: all 200ms ease;
-	transition-property: left, top;
+    text-align: center;
+    background: $color-grey-hover;
+    transition: all 200ms ease;
+    transition-property: left, top;
 }
