- Shadow changes - Sidenav styling changes - Variables changed - Updated typography.scss

--- a/client/src/scss/base/_typography.scss
+++ b/client/src/scss/base/_typography.scss
@@ -1,18 +1,21 @@
+// Import main font - Montserrat
 @import url("https://fonts.googleapis.com/css?family=Montserrat:500,700");
+// Import material icons
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-    font-family: $font;
-    font-weight: bold;
+  font-family: $font;
+  font-weight: bold;
 }
 
 p,
 span,
 a,
 li {
-    font-family: $font;
-    font-weight: medium;
+  font-family: $font;
+  font-weight: medium;
 }
