--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -1,9 +1,12 @@
 // All variables should be written with normal dashes ---- NOT ____ NOR camelCase
 // Variable names should be clear and easy to understand
 // EG: colors start with color-, font styles start with font-
+// Colors
 $color-white: rgb(255, 255, 255);
 $color-light-grey: rgb(244, 245, 245);
 $color-grey: rgb(112, 112, 112);
 $color-grey-hover: rgb(86, 86, 86);
 $color-black: rgb(61, 61, 61);
+$color-red: #cf1f3e;
+// Fonts
 $font: "Montserrat", sans-serif;
