--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,7 +37,7 @@ li {
 
 .shadow1 {
   -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.04), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2); }
 
 .shadow2 {
   -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
@@ -170,6 +170,34 @@ li {
   padding: 56px 0 0 15px; }
   .sideNav .btn {
     margin-top: 20px; }
+  .sideNav .companyList {
+    margin: 20px 0 0 0;
+    padding: 0;
+    color: #cf1f3e;
+    font-weight: bold;
+    list-style-type: none; }
+    .sideNav .companyList li {
+      padding-top: 10px; }
+    .sideNav .companyList .subList {
+      color: #707070;
+      font-weight: normal;
+      list-style-type: none;
+      padding-left: 25px; }
+      .sideNav .companyList .subList li {
+        padding: 5px 5px;
+        position: relative; }
+        .sideNav .companyList .subList li::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: -10px;
+          width: 1px;
+          height: 100%;
+          background-color: #cf1f3e; }
+        .sideNav .companyList .subList li:first-child {
+          margin-top: 5px; }
+        .sideNav .companyList .subList li:last-child {
+          margin-bottom: 5px; }
 
 .dropdown {
   width: 150px;
