--- a/client/src/scss/base/_shadows.scss
+++ b/client/src/scss/base/_shadows.scss
@@ -5,8 +5,8 @@
 .shadow1 {
   -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.04),
     0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-    0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0), 0 3px 1px -2px rgba(0, 0, 0, 0.12),
+    0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
 .shadow2 {
