--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -17,3 +17,4 @@
 @import "scss/components/weather";
 @import "scss/components/widgets";
 @import "scss/components/login";
+@import "scss/components/customCheckmark";
