--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -7,6 +7,9 @@ $color-light-grey: rgb(244, 245, 245);
 $color-grey: rgb(112, 112, 112);
 $color-grey-hover: rgb(86, 86, 86);
 $color-black: rgb(61, 61, 61);
-$color-red: #cf1f3e;
+$color-red: rgb(207, 31, 62);
+$color-red-transparent: rgba(207, 31, 62, 0.6);
+$color-black-transparent-10: rgba(0, 0, 0, 0.1);
 // Fonts
-$font: "Montserrat", sans-serif;
+$font: "Montserrat",
+sans-serif;
