--- a/client/src/scss/components/_login.scss
+++ b/client/src/scss/components/_login.scss
@@ -1,64 +1,90 @@
-.loginImage {
-  position: relative;
-  display: inline-block;
-  background-image: url(img/lamecoLoginImg.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+.login {
+  width: 100%;
   height: 100vh;
-  width: 65vw;
-  .imageText {
-    position: absolute;
-    top: 50vh;
-    left: 65px;
-    color: $color-white;
-  }
-  .overlayImage {
-    background-color: $color-red-transparent;
-    height: inherit;
-    width: inherit;
-  }
-}
-
-.loginContainer {
-  position: relative;
-  display: inline-block;
-  width: 34vw;
-  height: 100vh;
-  .formContainer {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    h3 {
-      text-transform: uppercase;
-      margin-bottom: 70px;
+  display: grid;
+  grid-template-columns: 65% 35%;
+  grid-template-rows: 100%;
+  grid-template-areas: "image container";
+  .loginImage {
+    position: relative;
+    grid-area: image;
+    background-image: url(img/lamecoLoginImg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    .imageText {
+      margin-left: 50px;
+      padding: 0 15px;
+      color: $color-white;
+      z-index: 1;
     }
+    .overlayImage {
+      position: absolute;
+      background-color: $color-red-transparent;
+      width: 100%;
+      height: 100vh;
+    }
+  }
+  .loginContainer {
+    grid-area: container;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     form {
-      width: 390px;
-      height: auto;
-      input {
-        margin-bottom: 45px;
-        width: inherit;
-        background: transparent;
-        border: 0;
-        outline: 0;
-        border-bottom: 1px solid $color-red;
+      width: 65%;
+      height: 40vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      h3 {
+        text-transform: uppercase;
       }
-      ::placeholder {
-        color: rgb(185, 185, 185);
+      .middleForm {
+        height: 15vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        .formField {
+          height: 7.5vh;
+          input {
+            width: 100%;
+            background: transparent;
+            border: 0;
+            outline: 0;
+            border-bottom: 2px solid $color-red-transparent;
+          }
+          ::placeholder {
+            color: rgb(185, 185, 185);
+          }
+          .invalid {
+            margin-top: 2px;
+            font-size: 0.8em;
+            color: $color-red;
+          }
+        }
       }
-      .formBottom{
-        //TODO
-        //justify-content space between
-        //flex display?
-      }
-      span a {
-        position: relative;
-        color: $color-red;
-        text-decoration: none;
-      }
-      button {
-        position: absolute;
+      .bottomForm {
+        div {
+          display: flex;
+          justify-content: space-between;
+          span a {
+            text-align: right;
+            color: $color-red;
+            text-decoration: none;
+            line-height: 25px;
+          }
+        }
+        height: 10vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-content: center;
+        button {
+          width: 30%;
+          margin: 0 35%;
+        }
       }
     }
   }
