--- a/client/src/scss/components/_login.scss
+++ b/client/src/scss/components/_login.scss
@@ -32,7 +32,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    form {
+    position: relative;
+    div.forgotpassworderror {
+      position: absolute;
+      top: 25vh;
+      left: 17.5%;
+      color: $color-red;
+    }
+    form.loginForm {
       width: 65%;
       height: 40vh;
       display: flex;
@@ -73,7 +80,10 @@
             text-align: right;
             color: $color-red;
             text-decoration: none;
-            line-height: 25px;
+            line-height: 24px;
+          }
+          span a:hover {
+            text-decoration: underline;
           }
         }
         height: 10vh;
@@ -84,6 +94,208 @@
         button {
           width: 30%;
           margin: 0 35%;
+        }
+      }
+    }
+    form.forgotForm {
+      width: 65%;
+      height: 40vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      h3 {
+        text-transform: uppercase;
+      }
+      .middleForm {
+        height: 15vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        .formText {
+          height: 5vh;
+        }
+        .formField {
+          height: 7.5vh;
+          input {
+            width: 100%;
+            background: transparent;
+            border: 0;
+            outline: 0;
+            border-bottom: 2px solid $color-red-transparent;
+          }
+          ::placeholder {
+            color: rgb(185, 185, 185);
+          }
+          .invalid {
+            margin-top: 2px;
+            font-size: 0.8em;
+            color: $color-red;
+          }
+        }
+      }
+      .bottomForm {
+        height: 10vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-content: center;
+        a {
+          text-align: left;
+          color: $color-red;
+          text-decoration: none;
+          line-height: 24px;
+          display: flex;
+          justify-content: center;
+          align-self: flex-start;
+        }
+        a i {
+          margin-right: -2px;
+        }
+        a:hover span {
+          text-decoration: underline;
+          margin-left: 5px;
+        }
+        a:hover i {
+          margin-left: -5px;
+        }
+        button {
+          width: 30%;
+          margin: 0 35%;
+        }
+      }
+    }
+    form.passwordReset {
+      width: 65%;
+      height: 40vh;
+      display: flex;
+      justify-content: space-around;
+      flex-direction: column;
+      h3 {
+        text-transform: uppercase;
+      }
+      p {
+        height: 5vh;
+      }
+      .middleForm {
+        height: 20vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        .formField {
+          height: 7.5vh;
+          input {
+            width: 100%;
+            background: transparent;
+            border: 0;
+            outline: 0;
+            border-bottom: 2px solid $color-red-transparent;
+          }
+          ::placeholder {
+            color: rgb(185, 185, 185);
+          }
+          .invalid {
+            margin-top: 2px;
+            font-size: 0.8em;
+            color: $color-red;
+          }
+        }
+      }
+      .bottomForm {
+        div {
+          display: flex;
+          justify-content: space-between;
+          span a {
+            text-align: right;
+            color: $color-red;
+            text-decoration: none;
+            line-height: 24px;
+          }
+          span a:hover {
+            text-decoration: underline;
+          }
+        }
+        height: 5vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-content: center;
+        button {
+          width: 30%;
+          margin: 0 35%;
+        }
+      }
+    }
+    div.forgotSuccess {
+      width: 65%;
+      height: 40vh;
+      display: flex;
+      justify-content: space-around;
+      flex-direction: column;
+      h3 {
+        text-transform: uppercase;
+      }
+      p {
+        height: 15vh;
+        text-align: justify;
+      }
+      .bottomForm {
+        height: 10vh;
+        a {
+          text-align: left;
+          color: $color-red;
+          text-decoration: none;
+          line-height: 24px;
+          display: flex;
+        }
+        a i {
+          margin-right: -2px;
+        }
+        a:hover span {
+          text-decoration: underline;
+          margin-left: 5px;
+        }
+        a:hover i {
+          margin-left: -5px;
+        }
+      }
+    }
+    div.passwordResetSuccess {
+      width: 65%;
+      height: 40vh;
+      display: flex;
+      justify-content: space-around;
+      flex-direction: column;
+      h3 {
+        text-transform: uppercase;
+      }
+      p {
+        height: 5vh;
+        text-align: justify;
+      }
+      a {
+        color: $color-red;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+      .bottomForm {
+        height: 17.5vh;
+        a {
+          text-align: left;
+          color: $color-red;
+          text-decoration: none;
+          line-height: 24px;
+          display: flex;
+        }
+        a i {
+          margin-right: -2px;
+        }
+        a:hover span {
+          text-decoration: underline;
+          margin-left: 5px;
+        }
+        a:hover i {
+          margin-left: -5px;
         }
       }
     }
